--- a/testproject/polls/templates/polls/base.html
+++ b/testproject/polls/templates/polls/base.html
@@ -1,11 +1,34 @@
-<!DOCTYPE html>
+{% load staticfiles %}
 
+<!DOCTYPE html>
 <html>
 <head>
-	<meta charset="UTF-8">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
 	<title>Example company</title>
+
+
+    <!-- Bootstrap core CSS -->
+<!--
+<link href="/docs/4.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+-->
+<link 
+		href="{% static 'polls/bootstrap-4.3.1-dist/css/bootstrap.min.css' %}" 
+
+		rel="stylesheet" 
+
+		integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" 
+
+		crossorigin="anonymous">
+
+	<link rel="stylesheet" type="text/css" href="{% static 'polls/style.css' %}">
 </head>
+
+
 <body>
+    <div class="container">
+
 
 	{% include "polls/header.html" %}
 
@@ -16,5 +39,6 @@
 
 	{% include "polls/footer.html" %}
 
+</div>
 </body>
 </html>
