--- a/testproject/polls/templates/polls/detail.html
+++ b/testproject/polls/templates/polls/detail.html
@@ -27,9 +27,14 @@
 
 
 
-<input type="submit" value="vote"/>
+<input type="submit" class="btn btn-success" value="vote"/>
 
 </form>
 
+<br>
+<a href="{% url 'polls:index' %}"><< Back to Question List</a>
+
+<br>
+<br>
 
 {% endblock %}
