--- a/testproject/polls/templates/polls/header.html
+++ b/testproject/polls/templates/polls/header.html
@@ -1,3 +1,38 @@
-<hr>
-header
-<hr>
+<!--
+<div class="header clearfix" >
+
+	<nav>
+		<ul class="nav nav-pills pull-right">
+			<li role="presentation" class="active">
+				<a href="#">
+					Home
+				</a>
+			</li>
+			<li role="presentation">
+				<a href="#">
+					About
+				</a>
+			</li>
+			<li role="presentation"><a href="#">Contact</a></li>
+		</ul>
+	</nav>
+	<h3 class="text-muted">Project Name</h3>
+</div>
+-->
+
+
+<div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
+  <h5 class="my-0 mr-md-auto font-weight-normal">Project name</h5>
+  <nav class="my-2 my-md-0 mr-md-3">
+    
+    <a class="p-2 text-dark" href="#">Home</a>
+    
+    <a class="p-2 text-dark" href="#">About</a>
+    
+    <a class="p-2 text-dark" href="#">Contact</a>
+    
+  </nav>
+<!--  
+  <a class="btn btn-outline-primary" href="#">Sign up</a>
+-->
+</div>
