--- a/testproject/polls/templates/polls/index.html
+++ b/testproject/polls/templates/polls/index.html
@@ -6,9 +6,11 @@
 
 
 {% if latest_question_list %}
+	<h1>Question List</h1>
 
 	<ul>
 		{% for question in latest_question_list %}
+
 			<li>
 
 				<a href='{% url "polls:detail" question.id %}'>
