--- a/testproject/hanuman/templates/hanuman/index.html
+++ b/testproject/hanuman/templates/hanuman/index.html
@@ -1,13 +1,15 @@
 
-
 {% extends "hanuman/base.html" %}
 
 {% block main_content %}
 
 
-{% if latest_question_list %}
-<h1>Ing. Javier Revilla</h1>
-<h2>Ingeniería de Software</h2>
+
+{% if latest_programmer_list %}
+
+<h1>Programmers</h1>
+
+<h2>Profiles</h2>
 
 	<ul>
 		{% for programmer in latest_programmer_list %}
